--- a/docker-compose.fixme.yml
+++ b/docker-compose.fixme.yml
@@ -1,3 +1,7 @@
+# The easiest way to access MongoDB from 
+# another server is to use an SSH tunnel.
+# Otherwise, remove the "127.0.0.1:" and
+# open ports 27017 and 8081 on the firewall.
 version: "3.1"
 services:
 
@@ -5,7 +9,7 @@ services:
     build: d-mongodb
     restart: always
     ports:
-      - "27017:27017"
+      - "127.0.0.1:27017:27017"
     volumes:
       - "/opt/mongodb:/data"
 
@@ -13,7 +17,7 @@ services:
     image: mongo-express
     restart: always
     ports:
-      - "8081:8081"
+      - "127.0.0.1:8081:8081"
     links:
       - stormy_mongodb:mongo
     environment:
