mongodb data dir should be local

--- a/docker-compose.fixme.yml
+++ b/docker-compose.fixme.yml
@@ -11,7 +11,7 @@ services:
     ports:
       - "127.0.0.1:27017:27017"
     volumes:
-      - "/opt/mongodb:/data"
+      - "mongo-data:/data"
 
   stormy_mongoexpress:
     image: mongo-express
